# informatics_laboratories_11

./: README.md  pyproject.toml
appendix/: report.docx
articles/: views.py
articles/templates/: archive.html  article.html
blog/: urls.py
